syntax = "proto3";

import "catalog.proto";

option csharp_namespace = "App.Support.Common.Protos.Cart";

package cart;

message CartItemDTO {
  string id = 1;
  string productId = 2;
  catalog.ProductDTO product = 3;
  uint32 quantity = 4;
  string addedAt = 5;
}

message CartDTO {
  string id = 1;
  string accountId = 2;
  string createdAt = 3;
  repeated CartItemDTO cartItems = 4;
  string discountCode = 5;
}